<resources>
    <string name="app_name">M\'Eat</string>

    <!-- Strings pour la page du plat en détail -->
    <string name="pates_bolognaises">Pâtes bolognaises</string>
    <string name="trois_euros">3 €</string>
    <string name="allergenes">Allergènes : </string>
    <string name="gluten">Gluten</string>
    <string name="lactose">Lactose</string>
    <string name="descritpion">Description : </string>
    <string name="descritpion_detail">Tortellinis, boeuf haché, emmental rapé, basilic</string>
    <string name="portions">Portions :</string>
    <string name="mode_de_retrait">Mode de retrait :</string>
    <string name="pick_up">PickUp</string>
    <string name="home">Home</string>
    <string name="horaire_de_retrait">Horaire de retrait :</string>
    <string name="horaires_chiffres">20h - 22h</string>
    <string name="contact">CONTACT</string>
    <string name="pay">PAY</string>
    <string name="henry">Henry</string>
    <string name="quatre_etoiles">4 étoiles</string>


    <!-- portions menu déroulant liste fixe, à changer en java après-->
    <string-array name="portions_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string-array name="retrait_options">
        <item>Tous</item>
        <item>PickUp</item>
        <item>Home</item>
    </string-array>

    <!-- Strings pour la page de validation de commande -->
    <string name="enjoy_your_order">Enjoy your order !</string>
    <string name="dont_forget_container">Don\'t forget to take a container to make it easier.</string>
    <string name="close">Close</string>
    <string name="help">Help</string>

    <!-- Strings pour la page de detail de la commande -->
    <string name="your_order">Your order</string>
    <string name="une_portion">1 pc</string>
    <string name="num_appartement">1288</string>
    <string name="edit">Edit</string>
    <string name="go_to_checkout">Go to Checkout</string>
    <string name="therese_papillon">Thérèse Papillon,</string>
    <string name="deuxieme_etage">2ème</string>
    <string name="fermer_page">Fermer la page</string>

    <!-- Strings pour la page de profil (raf) -->

    <style name="ProfileShortcut">
        <item name="android:layout_width">80dp</item>
        <item name="android:layout_height">80dp</item>
        <item name="android:orientation">vertical</item>
        <item name="android:background">@drawable/rounded_button</item>
        <item name="android:gravity">center</item>
        <item name="android:layout_margin">8dp</item>
        <item name="android:padding">8dp</item>
        <item name="android:clickable">true</item>
        <item name="android:focusable">true</item>
    </style>

    <style name="ProfileShortcutLabel">
        <item name="android:layout_width">wrap_content</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:layout_marginTop">4dp</item>
        <item name="android:textColor">@android:color/black</item>
        <item name="android:textSize">14sp</item>
        <item name="android:fontFamily">@font/inter_18pt_bold</item>
    </style>

    <style name="ProfileCard">
        <item name="android:layout_width">120dp</item>
        <item name="android:layout_height">140dp</item>
        <item name="android:orientation">vertical</item>
        <item name="android:background">@drawable/rounded_button</item>
        <item name="android:gravity">center</item>
        <item name="android:padding">12dp</item>
        <item name="android:clickable">true</item>
        <item name="android:focusable">true</item>
    </style>

    <style name="ProfileCardTitle">
        <item name="android:layout_width">wrap_content</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:fontFamily">@font/inter_18pt_bold</item>
        <item name="android:textColor">@android:color/black</item>
        <item name="android:textSize">18sp</item>
    </style>

    <style name="ProfileCardIcon">
        <item name="android:layout_width">40dp</item>
        <item name="android:layout_height">40dp</item>
        <item name="android:layout_marginTop">8dp</item>
        <item name="android:layout_gravity">center_horizontal</item>
    </style>

    <style name="ProfileCardArrow">
        <item name="android:layout_width">20dp</item>
        <item name="android:layout_height">20dp</item>
        <item name="android:layout_gravity">end|bottom</item>
        <item name="android:layout_marginEnd">4dp</item>
        <item name="android:layout_marginBottom">4dp</item>
    </style>


</resources>