<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    tools:context=".ValidationDeCommandeFragment">

    <!-- Croix ou logo -->
    <ImageView
        android:id="@+id/logo_croix"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/pates_bolognaise"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp" />

    <!-- Bouton d'aide -->
    <Button
        android:id="@+id/help_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/help"
        style="@style/TextStyleBlackRegular"
        android:textSize="17sp"
        android:backgroundTint="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"/>

    <!-- Titre : Enjoy your order -->
    <TextView
        android:id="@+id/enjoy_your_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enjoy_your_order"
        android:textSize="22sp"
        style="@style/TextStyleWhiteBold"
        app:layout_constraintTop_toBottomOf="@id/logo_croix"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="50dp"
        android:layout_marginStart="40dp"/>

    <!-- Texte secondaire -->
    <TextView
        android:id="@+id/dont_forget_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/dont_forget_container"
        android:textSize="17sp"
        style="@style/TextStyleWhiteLight"
        app:layout_constraintTop_toBottomOf="@id/enjoy_your_order"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"/>

    <!-- Image plat au centre -->
    <ImageView
        android:id="@+id/logo_commande"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:src="@drawable/pates_bolognaise"
        app:layout_constraintTop_toBottomOf="@id/dont_forget_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="60dp" />

    <!-- Bouton Close -->
    <Button
        android:id="@+id/close_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/close"
        style="@style/TextStyleWhiteBold"
        android:textSize="17sp"
        android:backgroundTint="@color/black"
        app:layout_constraintTop_toBottomOf="@id/logo_commande"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="80dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>
